# screen-record

./: .gitignore  README.md  ScreenRecord.spec  build.sh  main.py  pyproject.toml
.agents/skills/python-performance/: SKILL.md
.agents/skills/python-performance/scripts/: profile_helper.py
assets/: captokey.icns
scripts/: profile_capture.py
src/screen_record/: __init__.py  app.py  models.py  runtime.py  settings.py
src/screen_record/capture/: __init__.py  ffmpeg.py  keystrokes.py  providers.py  session.py
src/screen_record/render/: ffmpeg_renderer.py  overlay.py  timeline.py
src/screen_record/ui/: global_hotkeys.py  main_window.py  region_selector.py  settings_dialog.py
tests/: test_keystrokes.py  test_region_selector.py  test_renderer.py  test_runtime.py  test_settings.py  test_timeline.py
